--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 		</section>
 		<!-- Fact section end -->
 
-	<!-- About section -->
+<!-- About section -->
 	<section class="about-section spad">
 		<div class="container">
 			<div class="row">
@@ -117,13 +117,19 @@
 					<h2>What is Honestblocks</h2>
 					<h5>Counterfeit medicine is a $200 billion industry killing millions each year. Around 10% of medicines across the world are counterfeit and this rate is as high as 30%-40% in some areas of Asia, Latin America and Africa.</h5>
 					<p>Honestblocks is a medication tracking app built on Hyperledger Fabric and Composer with the goal to put an end to counterfeit medication. Each user can create a 'channel', and this allows for simple transactions in a supply chain and tracking of the drug all the way from manufacturer to consumer.</p>
-					<a href="https://medium.com/@alishbai734/blockchain-to-save-1-5-million-lives-by-ending-counterfeit-medicine-6e08c394e9c3?source=friends_link&sk=f3b191f24b2b4c924274d847a1e63d38" class="site-btn sb-gradients sbg-line mt-5">Learn More</a>
+					<a href="https://medium.com/@alishbai734/blockchain-to-save-1-5-million-lives-by-ending-counterfeit-medicine-6e08c394e9c3?source=friends_link&sk=f3b191f24b2b4c924274d847a1e63d38" >Learn More</a>
 				</div>
 			</div>
 			<div class="about-img">
 				<img src="img/about-img.png" alt="">
+
 			</div>
 		</div>
+		<br>
+		<br>
+		
+		<center><iframe aloign="middle" width="800" height="500" src="https://www.youtube.com/embed/7b5EnV_D-7I" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></center>
+
 	</section>
 	<!-- About section end -->
 
